# magnitude

./: pyproject.toml
.devcontainer/: devcontainer.json
pymagnitude/: converter.py
