[project]
name = "pymagnitude"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "annoy>=1.11.4",
    "fasteners>=0.14.1",
    "h5py>=2.8.0",
    "lz4>=1.0.0",
    "numpy>=1.14.0",
    "torch>=2.5.1",
    "xxhash>=1.0.1",
]

[dependency-groups]
dev = [
    "pymagnitude",
]

[tool.uv.sources]
pymagnitude = { workspace = true }
